frontend/test/should_pass/param_008.grg
rule r(<-e:UEdge->)
{
    x:Node <-e- y:Node;

    replace {
    }
}
