frontend/test/should_fail/from_storage_001.grg
using from_storage;

rule r(ref m:set<NN>)
{
	x:N<m> --> y:Node;
	
	modify {
		delete(y);
	}
}

